bk_ida/gccida/g2/df_ref_record
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/df.c:1326:69: error: must use 'enum' tag to refer to type 'df_ref_type'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                    ^
                                                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/df.c:1326:91: error: must use 'enum' tag to refer to type 'df_ref_flags'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                                          ^
                                                                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/df.c:1336:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/df.c:1357:34: error: invalid suffix 'xmode' on integer constant
if ( v22 >= mode_size[*(short *)0xmode] && v22 < mode_size[*( ( unsigned __int8 *)rtx + 2)] ) 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/df.c:1363:14: error: expected expression
loc = ( rtx *)reg->fld; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/df.c:1379:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = ( ( unsigned int)( mode_class_0[v14] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/df_ref_record/src/obj/df.o] Error 1
